--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body >
 	<div id="main-container">
-	<script>showHeader(true); </script>
+	<script>showHeader(true); highlightMenu(0)</script>
 	<section>
 	
 		<article>
