--- a/pages/alltraiinings.html
+++ b/pages/alltraiinings.html
@@ -14,7 +14,7 @@
 
 <body >
 	<div id="main-container">
-		<script>showHeader(true); </script>
+		<script>showHeader(true); highlightMenu(0)</script>
 		<section id="latest_trainings">
 			<div class="heading">
 				<h1> All Trainings </h1>
