--- a/tw1.html
+++ b/tw1.html
@@ -82,7 +82,7 @@
       <div class="text-left">
         <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">AI to enrich your business</h1>
         <p class="mt-6 text-lg leading-8 text-gray-600">LOOKING FOR AI TO OPEN NEW BUSINESS OPPORTUNITIES BUT WORRIED ABOUT TECHNOLOGY CHALLENGES?</p>
-        <div class="mt-10 flex items-center justify-center gap-x-6">
+        <div class="mt-10 flex items-center justify-left gap-x-6">
           <a href="#" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Get started</a>
           <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Learn more <span aria-hidden="true">→</span></a>
         </div>
