--- a/tw1.html
+++ b/tw1.html
@@ -1,3 +1,11 @@
+<!doctype html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body>
 <div class="bg-white">
   <header class="absolute inset-x-0 top-0 z-50">
     <nav class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
@@ -122,12 +130,5 @@
     </div>
   </main>
 </div>
-With offset image
-Requires JS
-
-Preview
-
-Code
-
-HTML
-
+</body>
+</html>
