--- a/about.html
+++ b/about.html
@@ -9,10 +9,8 @@
 <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic%7CRoboto:300,regular,500,700%7CInter:300,regular,500,600,700,800"
     media="all">
-<link href="https://cdn.prod.website-files.com/60fd4503684b466578c0d307/62c18dcdc46ace2977f25f01_ai21_favicon.png"
-    rel="shortcut icon" type="image/x-icon">
-<link href="https://cdn.prod.website-files.com/60fd4503684b466578c0d307/62c18dd267a6a3115001071d_ai21_webclip.png"
-    rel="apple-touch-icon">
+<link href="./favicon_16x16.png" rel="shortcut icon" type="image/x-icon">
+<link href="./favicon_48x48.png" rel="apple-touch-icon">
 
 <style>
 * {
