--- a/contact.html
+++ b/contact.html
@@ -260,12 +260,19 @@
                 <div class="api--content-left-top" style="border-bottom: 0.5px solid grey; padding-bottom: 1.5rem;">
                     <h1 class="p-title is--67 is--hero-contact"><span class="title-hero-top is--2">Wants to start</span><br><span class="text-blue">Your AI Journey</span></h1>
                     
-                <h2 class="p-title is--47 is--hero-contact"><span class="title-hero-top is--2">Contact Us @</span><br><span class="text-blue">sales@tensorlogic.ai</span></h2>
+                <h2 class="p-title is--47 is--hero-contact">
+					<span class="title-hero-top is--2">Contact Us @</span><br/>
+					<span class="title-hero-top text-blue" style="font-size:30px">sales@tensorlogic.ai</span>
+				</h2>
 			</div>
             <div class="api--content-left-top">
                     <h1 class="p-title is--67 is--hero-contact"><span class="title-hero-top is--2">Wants to be part </span><br><span class="text-blue">of our Success</span></h1>
                     
-                <h2 class="p-title is--47 is--hero-contact"><span class="title-hero-top is--2">Send your resume to</span><br><span class="text-blue">hr@tensorlogic.ai</span></h2>
+                <h2 class="p-title is--47 is--hero-contact">
+					<span class="title-hero-top is--2">Send your resume to</span>
+					<br/>
+					<span class="title-hero-top text-blue" style="font-size:30px">hr@tensorlogic.ai</span>
+				</h2>
 			</div>
 		</div>            
       </div>       
@@ -278,7 +285,7 @@
 			<div class="api--content-left-top" style="min-width:30%;grid-row-gap: 12px;margin-top: 32px;">
 				<h1 class="p-title is--67 is--hero-contact"><span class="title-hero-top is--2">Chennai</span></h1>
 				<p id="w-node-_5c11b227-683e-5d4e-9f21-c53603338dbc-e72a453e" data-w-id="5c11b227-683e-5d4e-9f21-c53603338dbc" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; font-size:1rem" class="relative z-1 mobile-max-width-19r">
-				37/2 CLUB ROAD RIOLOK, <br/>FLAT 2ND FLOOR CHETPET, Chetput<br/><span class="paragraph-space-separator"> Egmore Nungambakkam,</span><br/> Chennai- 600031, Tamil
+				37/2 Club Road Riolok, <br/>Flat 2ND Floor Chetpet, Chetput<br/><span class="paragraph-space-separator"> Egmore Nungambakkam,</span><br/> Chennai- 600031, Tamil
 Nadu.</p>
 			</div>
 		</div>
