--- a/contact.html
+++ b/contact.html
@@ -198,8 +198,8 @@
 </header>
 
 <main class="main-wrapper" >
-  <div style="display: flex;border-bottom:0.5px solid lightgrey; margin-bottom:3rem">
-    <div class="section-studio is--api-main" style="padding-left: 5.125rem;padding-bottom:0.5rem">
+  <div style="display: flex;border-bottom:0.5px solid lightgrey; margin-bottom:3rem; padding-bottom: 2rem;">
+    <div class="section-studio is--api-main" style="padding-left: 5.125rem;padding-bottom:0.5rem; padding-top: 1rem;">
 	
         <div class="p--container is--api-main">
             <div class="api--content-left">
@@ -254,7 +254,7 @@
             
         </div>        
     </div>
-	<div class="section-studio is--api-main" style="padding-left: 5.125rem; padding-bottom:0.5rem">
+	<div class="section-studio is--api-main" style="padding-left: 5.125rem; padding-bottom:0.5rem; padding-top: 1rem;">
         <div class="p--container is--api-main">
             <div class="api--content-left" style="grid-row-gap: 18px;">
                 <div class="api--content-left-top" style="border-bottom: 0.5px solid grey; padding-bottom: 1.5rem;">
@@ -285,14 +285,14 @@
 			<div class="api--content-left-top" style="min-width:30%;grid-row-gap: 12px;margin-top: 32px;">
 				<h1 class="p-title is--67 is--hero-contact"><span class="title-hero-top is--2">Chennai</span></h1>
 				<p id="w-node-_5c11b227-683e-5d4e-9f21-c53603338dbc-e72a453e" data-w-id="5c11b227-683e-5d4e-9f21-c53603338dbc" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; font-size:1rem" class="relative z-1 mobile-max-width-19r">
-				37/2 Club Road Riolok, <br/>Flat 2ND Floor Chetpet, Chetput<br/><span class="paragraph-space-separator"> Egmore Nungambakkam,</span><br/> Chennai- 600031, Tamil
+				37/2 Club Road Riolok, <br/>Flat 2ND Floor Chetpet, Chetput<br/><span> Egmore Nungambakkam,</span><br/> Chennai- 600031, Tamil
 Nadu.</p>
 			</div>
 		</div>
 		<div class="api--content-left" style="grid-row-gap: 18px; grid-column-gap: 10rem; flex-direction: column;">
 			<div class="api--content-left-top" style="min-width:30%;grid-row-gap: 12px;margin-top: 32px;">
 				<h1 class="p-title is--67 is--hero-contact"><span class="title-hero-top is--2">Trivandrum</span></h1>
-				<p id="w-node-_5c11b227-683e-5d4e-9f21-c53603338dbc-e72a453e" data-w-id="5c11b227-683e-5d4e-9f21-c53603338dbc" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; font-size:1rem" class="relative z-1 mobile-max-width-19r">Second Floor, Sumaj Complex<br/>Chavadimukku<br/><span class="paragraph-space-separator">Sreekaryam,</span><br/> Trivandum- 695017, Kerala</p>
+				<p id="w-node-_5c11b227-683e-5d4e-9f21-c53603338dbc-e72a453e" data-w-id="5c11b227-683e-5d4e-9f21-c53603338dbc" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; font-size:1rem" class="relative z-1 mobile-max-width-19r">Second Floor, Sumaj Complex<br/>Chavadimukku<br/><span>Sreekaryam,</span><br/> Trivandum- 695017, Kerala</p>
 			</div>
 		</div>
 		<div class="api--content-left" style="grid-row-gap: 18px;grid-column-gap: 10rem; flex-direction: column;">
